--- a/assets/sass/_search.scss
+++ b/assets/sass/_search.scss
@@ -77,42 +77,48 @@
 }
 
 .content_right_search {
-  margin-bottom: 20px;
   transition: all 0.5s linear;
-  border-radius: 8px;
-  background-color: #fff;
-
-  &:hover {
-    box-shadow: 4px 7px 20px 3px rgba(0, 0, 0, 0.14);
-    transform: translate3d(0px, -8px, 15px);
+  display: flex;
+  padding-bottom: 10px;
+  border-bottom: 1px solid gray;
+  padding-top: 10px;
+  &:hover .content_main_search h4{
+    color: $main-co;
   }
 
   .bgr_img img {
     width: 100%;
     height: 76px;
     object-fit: cover;
-    border-radius: 8px;
+    // border-radius: 8px;
   }
 
   .content_main_search {
     padding: 7px;
 
     h4 {
-      font-size: 18px;
-      margin-top: 5px;
-      color: black;
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
       text-overflow: ellipsis;
+      color: #333;
+      font-size: 16px;
+      font-weight: 600;
+      margin-bottom: 4px;
+      transition: all 0.2s linear;
     }
+  }
+  .bgr_img {
+    width: 100px;
+    flex-shrink: 0;
+    height: 100%;
   }
 }
 
 .acs {
   background-color: #f9f9f9;
-  padding: 15px;
+  padding: 10px;
   border-radius: 4px;
 }
 
