--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,7 +300,8 @@ main {
     font-size: 25px; }
 .home_banner_img img {
   width: 100%;
-  object-fit: cover; }
+  object-fit: cover;
+  max-height: 480px; }
 
 .home_service {
   margin-top: 24px;
@@ -342,6 +343,9 @@ main {
         align-items: center; } }
     .home_flashsale_top .flashsale_left {
       display: flex; }
+      @media screen and (max-width: 900px) {
+        .home_flashsale_top .flashsale_left {
+          align-items: baseline; } }
       @media screen and (max-width: 500px) {
         .home_flashsale_top .flashsale_left {
           align-items: center; } }
@@ -353,6 +357,10 @@ main {
     @media screen and (max-width: 500px) {
       .home_flashsale_top .flashsale_icon svg {
         width: 30px; } }
+    @media screen and (max-width: 500px) {
+      .home_flashsale_top .flashsale_time .countdown {
+        padding-left: 10px;
+        padding-bottom: 4px; } }
     .home_flashsale_top .flashsale_time ul {
       display: flex;
       justify-content: space-between;
@@ -379,9 +387,18 @@ main {
             width: 30px; } }
         @media screen and (max-width: 500px) {
           .home_flashsale_top .flashsale_time ul li {
-            align-items: start; } }
+            align-items: start;
+            height: 27px;
+            width: 27px;
+            font-size: 12px; } }
         .home_flashsale_top .flashsale_time ul li span {
           color: white; }
+          @media screen and (max-width: 500px) {
+            .home_flashsale_top .flashsale_time ul li span {
+              padding-top: 4px; } }
+    @media screen and (max-width: 500px) {
+      .home_flashsale_top .flashsale_right {
+        display: none; } }
     .home_flashsale_top .flashsale_right a {
       color: var(--gray-gray-3-main, #1f2937);
       font-size: 19px;
@@ -391,7 +408,7 @@ main {
   .home_flashsale_bottom .product_item {
     margin-top: 10px;
     margin-bottom: 10px;
-    transition: all .5s;
+    transition: all 0.5s;
     background: #fff;
     border: 1px solid #e5e7eb;
     border-radius: 8px; }
@@ -476,7 +493,7 @@ main {
       .home_category h2 {
         font-size: 25px; } }
   .home_category_wrap {
-    margin-top: 50px;
+    margin-top: 5px;
     display: inline-flex;
     justify-content: left;
     max-width: 100%;
@@ -489,12 +506,12 @@ main {
       .home_category_wrap {
         margin-top: 20px; } }
     .home_category_wrap::-webkit-scrollbar {
-      height: 8px;
+      height: 5px;
       background-color: transparent;
       border-radius: 8px; }
     .home_category_wrap::-webkit-scrollbar-track {
       border-radius: 8px;
-      height: 5px; }
+      height: 2px; }
     .home_category_wrap::-webkit-scrollbar-thumb {
       height: 5px;
       border-radius: 8px;
@@ -537,11 +554,14 @@ main {
       @media screen and (max-width: 500px) {
         .home_category_wrap .category_icon img {
           width: 60%; } }
-    .home_category_wrap .category_title h4 {
-      color: #7b7b7b;
-      font-size: 16px;
-      line-height: 36px;
-      font-weight: 700; }
+    .home_category_wrap .category_title {
+      width: 155px;
+      text-align: center; }
+      .home_category_wrap .category_title h4 {
+        color: #7b7b7b;
+        font-size: 16px;
+        line-height: 36px;
+        font-weight: 700; }
 
 .home_ads {
   margin-top: 10px;
@@ -552,6 +572,34 @@ main {
     @media screen and (max-width: 1000px) {
       .home_ads img {
         margin-bottom: 10px; } }
+
+.add_shopping {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch; }
+  .add_shopping_wrap {
+    display: flex;
+    height: 40px;
+    max-height: 40px;
+    padding: 8px 16px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    border-radius: 6px;
+    background: var(--Primary_Color, #ca2a2a); }
+    .add_shopping_wrap p {
+      color: var(--gray-gray-11-main, #fff);
+      text-align: center;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      display: flex;
+      align-items: center;
+      margin: 0; }
 
 .home_feedback {
   height: 400px;
@@ -622,6 +670,8 @@ main {
     @media screen and (max-width: 500px) {
       .home_feedback .overlay_fb {
         height: auto; } }
+  .home_feedback .owl-dots {
+    display: block !important; }
 
 .checked {
   color: orange; }
@@ -1167,7 +1217,7 @@ main {
   .popScroll .popup {
     z-index: 10;
     width: 500px;
-    height: 300px;
+    height: 170px;
     position: relative;
     margin: 20px auto;
     display: block;
@@ -1473,11 +1523,19 @@ main {
           font-size: 20px;
           font-style: normal;
           font-weight: 500;
-          line-height: 24px;
-          /* 150% */ }
+          line-height: 24px; }
           @media (max-width: 600px) {
             .contact .support_info ul li p {
-              font-size: 18px; } }
+              font-size: 16px; } }
+          .contact .support_info ul li p a {
+            margin-left: 5px;
+            margin-right: 5px;
+            color: var(--gray-gray-3-main, #1f2937);
+            text-align: justify;
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 24px; }
   .contact .support_form {
     display: flex;
     padding: 16px;
@@ -2182,7 +2240,8 @@ main {
       font-size: 20px; }
 
 #nav {
-  text-align: center; }
+  text-align: center;
+  margin-bottom: 10px; }
   #nav button {
     background-color: #f92296;
     color: #fff;
@@ -2746,33 +2805,38 @@ form.checkout.woocommerce-checkout div.fc-place-order button.fc-place-order-butt
     padding-left: 5px; }
 
 .content_right_search {
-  margin-bottom: 20px;
   transition: all 0.5s linear;
-  border-radius: 8px;
-  background-color: #fff; }
-  .content_right_search:hover {
-    box-shadow: 4px 7px 20px 3px rgba(0, 0, 0, 0.14);
-    transform: translate3d(0px, -8px, 15px); }
+  display: flex;
+  padding-bottom: 10px;
+  border-bottom: 1px solid gray;
+  padding-top: 10px; }
+  .content_right_search:hover .content_main_search h4 {
+    color: #F92296; }
   .content_right_search .bgr_img img {
     width: 100%;
     height: 76px;
-    object-fit: cover;
-    border-radius: 8px; }
+    object-fit: cover; }
   .content_right_search .content_main_search {
     padding: 7px; }
     .content_right_search .content_main_search h4 {
-      font-size: 18px;
-      margin-top: 5px;
-      color: black;
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
-      text-overflow: ellipsis; }
+      text-overflow: ellipsis;
+      color: #333;
+      font-size: 16px;
+      font-weight: 600;
+      margin-bottom: 4px;
+      transition: all 0.2s linear; }
+  .content_right_search .bgr_img {
+    width: 100px;
+    flex-shrink: 0;
+    height: 100%; }
 
 .acs {
   background-color: #f9f9f9;
-  padding: 15px;
+  padding: 10px;
   border-radius: 4px; }
 
 .page-blogs {
@@ -3201,22 +3265,35 @@ button.button:hover {
           /* 150% */
           color: white;
           margin-right: 5px; }
+          .footer_wrap ul li p a {
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 24px;
+            /* 150% */
+            color: white;
+            margin-right: 5px; }
   .footer_icon_wrap {
     display: flex;
     margin-top: 15px;
-    gap: 10px; }
+    gap: 10px;
+    padding-bottom: 10px; }
 
 .copyright {
   background: var(--gray-gray-3-main, #1F2937); }
   .copyright_wrap {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding-top: 8px;
     padding-bottom: 8px; }
     @media screen and (max-width: 1100px) {
       .copyright_wrap {
-        padding-bottom: 60px; } }
+        padding-bottom: 75px; } }
+    @media screen and (max-width: 500px) {
+      .copyright_wrap {
+        padding-bottom: 65px;
+        text-align: center; } }
   .copyright_left p {
     color: #fff;
     margin: 0;
