--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -70,7 +70,14 @@
           line-height: 24px; /* 150% */
           color: white;
           margin-right: 5px;
-
+          a{
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 24px; /* 150% */
+            color: white;
+            margin-right: 5px;
+          }
         }
       }
     }
@@ -79,18 +86,24 @@
     display: flex;
     margin-top: 15px;
     gap: 10px;
+    padding-bottom: 10px;
   }
+  
 }
 .copyright{
   background: var(--gray-gray-3-main, #1F2937);
   &_wrap{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding-top: 8px;
   padding-bottom: 8px;
   @media screen and (max-width: 1100px) {
-    padding-bottom: 60px;
+    padding-bottom: 75px;
+   }
+   @media screen and (max-width: 500px) {
+    padding-bottom: 65px;
+    text-align: center;
    }
     
   }
