--- a/assets/sass/_home-banner.scss
+++ b/assets/sass/_home-banner.scss
@@ -1,4 +1,5 @@
 .home_banner {
+  // max-height: 480px;
   &_wrap {
     .owl-carousel .owl-nav button.owl-prev {
       position: absolute;
@@ -39,6 +40,7 @@
     img {
       width: 100%;
       object-fit: cover;
+      max-height: 480px;
     }
   }
 }
