--- a/assets/sass/_page-lien-he.scss
+++ b/assets/sass/_page-lien-he.scss
@@ -97,9 +97,19 @@
             font-size: 20px;
             font-style: normal;
             font-weight: 500;
-            line-height: 24px; /* 150% */
+            line-height: 24px; 
             @media (max-width: 600px) {
-              font-size: 18px;
+              font-size: 16px;
+            }
+            a{
+              margin-left: 5px;
+              margin-right: 5px;
+              color: var(--gray-gray-3-main, #1f2937);
+              text-align: justify;
+              font-size: 20px;
+              font-style: normal;
+              font-weight: 500;
+              line-height: 24px;
             }
           }
         }
