--- a/assets/sass/cua-hang/_cua-hang.scss
+++ b/assets/sass/cua-hang/_cua-hang.scss
@@ -66,6 +66,7 @@
 
 .shop_product1 {
   transition: all .5s ;
+ 
 
   & .shop_product_wrap {
       display: flex;
@@ -243,7 +244,7 @@
 
 #nav {
   text-align: center;
-
+  margin-bottom: 10px;
   button {
     background-color: #f92296;
     color: #fff;
