--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -63,7 +63,7 @@
           background: $main-co;
         }
         &:hover i {
-          transform: scale(1.3);
+          // transform: scale(1.3);
           color: white;
         }
         span {
