--- a/assets/sass/_home-category.scss
+++ b/assets/sass/_home-category.scss
@@ -69,10 +69,13 @@
         align-items: center;
         margin-left: 40px;
         margin-right: 40px;
+        @media screen and (max-width: 900px) {
+          margin-left: 5px;
+        }
         @media screen and (max-width: 500px) {
           width: 120px;
-          margin-left: 10px;
-          margin-right: 10px;
+          margin-left: 30px;
+          margin-right: 25px;
         }
       }
       &_icon {
@@ -85,12 +88,13 @@
         width: 120px;
         height: 120px;  
         @media screen and (max-width: 500px) {
-          width: 100px;
-          height: 100px; 
+          width: 80px;
+          height: 80px; 
         }
         img{
           @media screen and (max-width: 500px) {
-           width: 60%;
+            transform: scale(0.6);
+            width: 100%;
           }
         }
       }
