--- a/assets/sass/_home-flashsale.scss
+++ b/assets/sass/_home-flashsale.scss
@@ -108,6 +108,10 @@
         background: #fff;
         border: 1px solid #e5e7eb;
         border-radius: 8px;
+        @media screen and (max-width: 500px) {
+          height: 285px;
+          max-height: 100%;
+          }
         &:hover {
           border-radius: 8px;
           box-shadow: 10px 7px 20px 3px rgba(0, 0, 0, 0.14);
@@ -141,6 +145,9 @@
         border-radius: 8px;
         max-width: 100%;
         height: 280px;
+        @media screen and (max-width: 500px) {
+        height: 140px;
+        }
 
         &:hover img {
           transform: scale(1.1);
@@ -161,6 +168,9 @@
           display: flex;
           justify-content: space-between;
           padding: 0px 5px;
+          @media screen and (max-width: 500px) {
+            flex-direction: column;
+            }
           .oldprice {
             display: flex;
             padding-top: 3px;
