--- a/assets/sass/cua-hang/_chi-tiet-san-pham.scss
+++ b/assets/sass/cua-hang/_chi-tiet-san-pham.scss
@@ -194,14 +194,62 @@
   }
 }
 
-.price{
+.price {
   font-weight: 700;
 }
-.woocommerce p.stars a{
+.woocommerce p.stars a {
   color: orange !important;
-
 }
-.woocommerce #review_form #respond .form-submit input{
+.woocommerce #review_form #respond .form-submit input {
   color: #fff;
   background-color: $main-co;
+}
+// btn mua ngay ko biến thể
+.chi_tiet_sp {
+  .cart {
+    .btn-addcart {
+      flex-direction: column;
+      width: 50%;
+      gap: 20px;
+      .btn_mua_ngay {
+        background-color: #fff !important;
+        border: 1px solid #f92296 !important;
+        border-radius: 8px;
+        padding: 6px 115px;
+        color: #f92296 !important;
+        font-size: 18px;
+        font-weight: 700;
+      }
+    }
+  }
+}
+// btn mua ngay có biến thể
+
+.chi_tiet_sp {
+  .summary {
+    .single_variation_wrap {
+      .btn_mua_ngay {
+        margin-left: 50px;
+        background-color: #fff !important;
+        border: 1px solid #f92296 !important;
+        border-radius: 8px;
+        padding: 6px 115px;
+        color: #f92296 !important;
+        font-size: 18px;
+        font-weight: 700;
+        @media (max-width: 900px) {
+          margin-top: 20px;
+          margin-left: 0;
+        }
+        @media (max-width: 770px) {
+          margin-top: 0px;
+          margin-left: 20px;
+        }
+        @media (max-width: 600px) {
+          margin-top: 20px;
+          margin-left: 0px;
+        }
+      }
+    }
+  }
 }
