--- a/assets/sass/_thanh-toan.scss
+++ b/assets/sass/_thanh-toan.scss
@@ -189,4 +189,6 @@
       }
     }
   }
-  
+  div.woocommerce form .woocommerce-billing-only-fields__field-wrapper{
+    margin-top: 0 !important;
+  }
