--- a/assets/sass/gioi-thieu/_dang-ky.scss
+++ b/assets/sass/gioi-thieu/_dang-ky.scss
@@ -64,3 +64,11 @@
 //   position: relative;
 
 // }
+.login_post{
+  .wpcf7 {
+    .wpcf7-response-output{
+      padding: 0;
+      margin: 0;
+    }
+  }
+}
