--- a/assets/sass/_home-category.scss
+++ b/assets/sass/_home-category.scss
@@ -106,7 +106,7 @@
             font-size: 16px;
             line-height: 36px;
             font-weight: 700;
-           
+            white-space: nowrap;
         }
       }
     }
