--- a/assets/sass/_home-flashsale.scss
+++ b/assets/sass/_home-flashsale.scss
@@ -174,6 +174,9 @@
           .oldprice {
             display: flex;
             padding-top: 3px;
+            @media screen and (max-width: 500px) {
+              height: 37px;
+              }
             p {
               margin-right: 0px;
             }
