--- a/assets/sass/_page-lien-he.scss
+++ b/assets/sass/_page-lien-he.scss
@@ -110,6 +110,9 @@
               font-style: normal;
               font-weight: 500;
               line-height: 24px;
+              @media (max-width: 600px) {
+                font-size: 16px;
+              }
             }
           }
         }
