--- a/assets/sass/cua-hang/_cua-hang.scss
+++ b/assets/sass/cua-hang/_cua-hang.scss
@@ -16,28 +16,28 @@
       &_top {
         display: flex;
         width: 100%;
-        .icon_layout{
+        justify-content: space-between;
+        .icon_layout {
           display: flex;
-          p{
+          p {
             margin-right: 10px;
           }
-          svg{
+          svg {
             margin-right: 10px;
           }
           #button1 path {
-            fill:#9ca3af; /* Thay đổi màu thành đỏ (#FF0000) */
+            fill: #9ca3af; /* Thay đổi màu thành đỏ (#FF0000) */
+          }
+          #button2 path {
+            fill: #9ca3af; /* Thay đổi màu thành đỏ (#FF0000) */
+          }
+          .icon_layout_active {
+            path {
+              fill: $main-co !important;
+            }
+          }
         }
-        #button2 path {
-          fill: #9ca3af; /* Thay đổi màu thành đỏ (#FF0000) */
-      } 
-      .icon_layout_active{
-         path {
-          fill: $main-co !important;
-      } 
-        
-      }
-        }
-    
+
         h5 {
           margin-right: 20px;
           color: var(--gray-gray-7-opacity, #9ca3af);
@@ -50,11 +50,93 @@
           margin-bottom: 0px;
           width: 45%;
           background-color: #f3f4f6;
-          .filter-content{
+          .filter-content {
             background-color: #fff;
           }
         }
+        
+        &l{
+          // display: none;
+          @media (max-width: 500px) {
+            width: 40%;
+
+           }
+          .filter_shop{
+            display: none;
+            background-color: $main-co;
+            color: #fff;
+            border-radius: 6px;
+            justify-content: center;
+            align-items: center;
+            padding: 9px;
+            i{
+              margin-right: 5px;
+            }
+            p{
+              white-space: nowrap;
+              color: #fff;
+              margin-bottom: 0;
+            }
+            @media (max-width: 500px) {
+              display: flex;
+              // width: 50%;
+
+             }
+          }
+        }
+        &r{
+          @media (max-width: 500px) {
+            // display: flex;
+            width: 50%;
+
+           }
+        }
+        #overlay {
+          display: none;
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(0, 0, 0, 0.7); /* Màu nền mờ */
+          z-index: 999; /* Đảm bảo overlay hiển thị trên tất cả phần tử khác */
+        }
+        
+        #overlay.active {
+          display: block;
+        }
+        .filter_left{
+          position: fixed;
+          top: 0;
+          left: -100%; /* Điểm bắt đầu bên trái ngoài màn hình */
+          width: 65%; /* Chỉ hiển thị 50% chiều rộng của màn hình */
+          height: 100%;
+          background-color: #fff;
+          z-index: 9999999;
+          transition: left 0.5s;
+          padding: 20px 10px;
+          .yith-wcan-filters .yith-wcan-filter .filter-items .filter-item.hierarchy-collapsable .toggle-handle {
+            top: 7px;
+          }
+          p{
+            color: #000;
+            font-size: 18px;
+            font-weight: 700  ;
+          }
+          .yith-wcan-filters {
+            background-color: #fff;
+          }
+          .filters-container{
+           padding-left: 10px;
+           padding-right: 10px;
+          }
+        }
+        .show_filter_left{
+          left: 0;
+        }
+        
       }
+
     }
   }
 }
@@ -62,36 +144,45 @@
 .shop_product_main {
   display: flex;
   gap: 20px;
+  flex-direction: column;
+  @media (max-width: 500px) {
+    gap: 5px;
+   }
 }
 
 .shop_product1 {
-  transition: all .5s ;
- 
-
-  & .shop_product_wrap {
-      display: flex;
-      gap: 20px;
-      width: 100%;
-      justify-content: space-between;
-      transition: all .5s linear;
-  }
+  transition: all 0.5s;
+  padding: 5px 10px 0px 10px;
+  transition: all 0.5s;
+  background: #fff;
+  border: 1px solid #e5e7eb;
 
   justify-content: space-between;
   display: flex;
   margin-bottom: 20px;
   background-color: #fff;
-  padding: 20px 10px 20px 10px;
   border-radius: 8px;
-
+  &:hover{
+    box-shadow: 10px 7px 20px 3px rgba(0, 0, 0, 0.14);
+    transform: translate3d(0px, -8px, 15px);
+  }
   & .shop_product_wrap {
-      display: flex;
-      gap: 20px;
+    display: flex;
+    gap: 20px;
+    width: 100%;
+    justify-content: space-between;
+    transition: all 0.5s linear;
+  }
+  & .shop_product_wrap {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
   }
 
   & .shop_product_left img {
-      border-radius: 8px;
-      width: 160px;
-      height: 160px;
+    border-radius: 8px;
+    width: 100%;
+    height: 180px;
   }
 }
 
@@ -100,81 +191,102 @@
   flex-direction: column;
 
   & .product_title h2 {
-      color: var(--gray-gray-3-main, #1F2937);
-      font-size: 18px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 24px;
-      text-transform: capitalize;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-      text-overflow: ellipsis;
+    color: var(--gray-gray-3-main, #1f2937);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    text-transform: capitalize;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    @media (max-width: 500px) {
+     font-size: 16px;
+     margin-bottom: 2px;
+     }
   }
 
   & .product_sale {
-      display: flex;
+    display: flex;
+    justify-content: space-between;
+    height: 20px;
+    margin-bottom: 0;
+    & p {
+      color: var(--gray-gray-7-opacity, #9ca3af);
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 18px;
+      text-decoration-line: line-through;
+      @media (max-width: 500px) {
+        font-size: 14px;
+      
+        }
+    }
 
-      & p {
-          color: var(--gray-gray-7-opacity, #9CA3AF);
-          font-size: 16px;
-          font-style: normal;
-          font-weight: 400;
-          line-height: 18px;
-          text-decoration-line: line-through;
-      }
-
-      & span {
-          color: var(--second-red, #EF4444);
-          font-size: 16px;
-          font-style: normal;
-          font-weight: 400;
-          line-height: 18px;
-          margin-left: 10px;
-          /* 128.571% */
-      }
+    & span {
+      color: var(--second-red, #ef4444);
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 18px;
+      margin-left: 10px;
+      @media (max-width: 500px) {
+        font-size: 14px;
+        }
+    }
   }
 
   & .product_price p {
-      color: var(--second-red, #EF4444);
-      font-size: 17px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 24px;
-      /* 150% */
+    color: var(--second-red, #ef4444);
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+    margin-bottom: 0px;
+    @media (max-width: 500px) {
+      font-size: 15px;
+      }
   }
 }
 
 .shop_product_right {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  // align-items: center;
   justify-content: space-around;
 
   .btn_cart {
-      display: flex;
-      height: 40px;
-      max-height: 40px;
-      padding: 8px 16px;
-      justify-content: center;
-      align-items: center;
-      border-radius: 6px;
-      background: var(--gray-gray-10-bgr, #f3f4f6);
-      gap: 8px;
-      margin-bottom: 20px;
-      color: rgb(249, 34, 150);
+    display: flex;
+    height: 40px;
+    padding: 8px 16px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 6px;
+    background: var(--gray-gray-10-bgr, #f3f4f6);
+    gap: 8px;
+    margin-bottom: 20px;
+    color: rgb(249, 34, 150);
+    @media (max-width: 500px) {
+      padding: 0 5px;
+      height: 25px;
+     }
 
-      i {
-          padding: 15px;
-          font-size: 20px;
-          font-weight: 500;
-      }
+    i {
+      padding: 15px;
+      font-size: 20px;
+      font-weight: 500;
+      @media (max-width: 500px) {
+        font-size: 16px;
+       }
+    }
 
-      &:hover {
-          background: rgb(249, 34, 150);
-          color: var(--gray-gray-10-bgr, #f3f4f6);
-      }
+    &:hover {
+      background: rgb(249, 34, 150);
+      color: var(--gray-gray-10-bgr, #f3f4f6);
+    }
   }
 }
 
@@ -182,13 +294,13 @@
   width: 100%;
 
   a {
-      width: 100%;
+    width: 100%;
   }
 }
 
 .yith-wcwl-add-to-wishlist {
   margin-top: 0px;
-  width: 100%;
+  width: 33%;
 }
 
 .woocommerce a.add_to_wishlist.button.alt i {
@@ -197,6 +309,10 @@
   justify-content: center;
   margin-right: 0px;
   font-size: 20px;
+  @media (max-width: 500px) {
+    margin-top: -5px;
+    font-size: 16px;
+   }
 }
 
 .rating_main i {
@@ -209,17 +325,28 @@
   padding: 5px 15px;
   background-color: #f3f4f6;
   border-radius: 6px;
+  @media (max-width: 500px) {
+    padding: 3px 15px;
+    height: 25px;
+   }
 
   .feedback {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: 5px 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5px 15px;
+    @media (max-width: 500px) {
+      margin: 2px 15px;
+     }
 
-      .yith-wcwl-icon {
-          margin-right: 0px;
-          font-size: 20px;
-      }
+    .yith-wcwl-icon {
+      margin-right: 0px;
+      font-size: 20px;
+      @media (max-width: 500px) {
+        font-size: 16px;
+
+       }
+    }
   }
 }
 
@@ -230,15 +357,15 @@
   border-radius: 6px;
 
   .feedback {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: 5px 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5px 15px;
 
-      .yith-wcwl-icon {
-          margin-right: 0px;
-          font-size: 20px;
-      }
+    .yith-wcwl-icon {
+      margin-right: 0px;
+      font-size: 20px;
+    }
   }
 }
 
@@ -272,7 +399,7 @@
   }
 }
 
-#yith-wcwl-popup-message{
+#yith-wcwl-popup-message {
   display: none !important;
 }
 .shop_product_customer {
@@ -284,23 +411,24 @@
   flex-direction: column;
 }
 
-.woocommerce_breadcrumb_ct{
+.woocommerce_breadcrumb_ct {
   margin: 0 auto !important;
   font-size: 18px !important;
   padding: 15px 0px 15px 10px !important;
 }
 
-.price{
+.price {
   color: $main-co !important;
   font-size: 20px !important;
 }
- #block-5{
+#block-5 {
   display: none;
- }
- #block-6{
+}
+#block-6 {
   display: none;
- }
- .null_product{
+}
+.null_product {
   font-size: 18px;
   font-weight: 700;
- }
+}
+
