--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -433,5 +433,7 @@ main {
 @import "tai-khoan/my-address";
 @import "tai-khoan/edit-account";
 @import "tai-khoan/order-detail";
+@import "home-to-top";
+
 
 @import "footer";
