--- a/assets/sass/_home-service.scss
+++ b/assets/sass/_home-service.scss
@@ -22,6 +22,9 @@
     @media screen and (max-width: 1000px) {
       margin-bottom: 30px;
     }
+    @media screen and (max-width: 500px) {
+      margin-bottom: 10px;
+    }
     .service {
 
       &_top {
