--- a/assets/sass/_page-lien-he.scss
+++ b/assets/sass/_page-lien-he.scss
@@ -2,7 +2,7 @@
   &_breadcrumbs {
     margin-top: 20px;
     margin-bottom: 20px;
-    h2 {
+    p {
       color: var(--Gray-400---Opacity, #9ca3af);
 
       font-size: 18px;
