--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -118,7 +118,12 @@
       color: #fff;
       margin: 0;
       font-size: 14px;
+      @media screen and (max-width: 767px) {
+        font-size: 12px;
+
+       }
     }
+    
   }
   &_right{
     display: flex;
