--- a/assets/sass/_single-cam-nang.scss
+++ b/assets/sass/_single-cam-nang.scss
@@ -15,13 +15,19 @@
     }
     h1 {
       color: var(--pink-pink-4-main, #f92296);
-      font-size: 25px;
+      font-size: 32px;
       font-style: normal;
       font-weight: 700;
       line-height: 44px; /* 122.222% */
       @media (max-width: 600px) {
         line-height: 25px;
       }
+    }
+    h2{
+      font-size: 28px !important;
+    }
+    h3{
+    font-size: 24px !important;
     }
     p {
       color: var(--Gray-800---Main-text, #1f2937);
